# rusty_flutter_dir

./: .gitignore  README.md  build.sh  build_android.sh  build_ios.sh  pubspec.yaml  rustyFlutterNative.code-workspace  rustyFlutterTree.code-workspace  test_both.db
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/example/rusty_flutter/: MainActivity.java
ios/Runner/: AppDelegate.swift  Info.plist  Runner-Bridging-Header.h  rusted.h  transfer.swift
ios/Runner.xcodeproj/: project.pbxproj
ios/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
lib/: DB.dart  Misc.dart  Net.dart  main.dart  minimal_example.dart  working_example.dart
rust/: .gitignore  Cargo.toml  cargo-config.toml  store_many_different.txt
rust/src/: lib.rs  rusted.h
test/: widget_test.dart
test_driver/: app.dart  app_test.dart
