[package]
name = "rusted"
version = "0.0.1"
authors = ["smokytheangel <smokytheangel@gmail.com>"]
description = "static lib for rusty model in flutter apps"
publish = false

[dependencies]
serde_json = "1.0.39"
serde_derive = "1.0.89"
serde = "1.0.89"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.9", default-features = false }

[lib]
name = "rusted"
crate-type = ["staticlib", "cdylib"]
